--- a/code/package.json
+++ b/code/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code",
+  "name": "@bsendray/resume-builder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -21,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint **/*.{ts,tsx}",
+    "lint:fix": "eslint **/*.{ts,tsx} --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^8.56.0"
   }
 }
