--- a/code/package.json
+++ b/code/package.json
@@ -2,6 +2,7 @@
   "name": "@bsendray/resume-builder",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://bsendray.github.io/resume-builder",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -19,11 +21,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint **/*.{ts,tsx}",
-    "lint:fix": "eslint **/*.{ts,tsx} --fix"
+    "lint:fix": "eslint **/*.{ts,tsx} --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d bui"
   },
   "eslintConfig": {
     "extends": [
