--- a/code/package.json
+++ b/code/package.json
@@ -21,13 +21,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint **/*.{ts,tsx}",
     "lint:fix": "eslint **/*.{ts,tsx} --fix",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d bui"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
